# open-source-parrot-

./: app.json  setup.cfg
charts/whoogle/: Chart.yaml
