[metadata]
name = whoogle-search
url = https://github.com/benbusby/whoogle-search
description = Self-hosted, ad-free, privacy-respecting metasearch engine
long_description = file: README.md
long_description_content_type = text/markdown
keywords = search, metasearch, flask, adblock, degoogle, privacy
author = 
author_email = 
license = MIT
classifiers =

[options]
packages = find:
include_package_data = True
install_requires=
    beautifulsoup4
    cssutils
    cryptography
    defusedxml
    Flask
    Flask-Session
    python-dotenv
    requests
    stem
    waitress

[options.extras_require]
test =
    pytest
    python-dateutil
dev = pycodestyle

[options.entry_points]
console_scripts =
    whoogle-search = app.routes:run_app
